Decorating filters refactoring